re PR c++/48166 (ICE on static member function with invalid type qualifier)

PR c++/48166
	* decl.c (revert_static_member_fn): Strip function-cv-quals.

From-SVN: r171679